--- a/ASP.NET-MVC/Template/Template/Views/Shared/_SideBar.cshtml
+++ b/ASP.NET-MVC/Template/Template/Views/Shared/_SideBar.cshtml
@@ -1,12 +1,7 @@
 ﻿ <div style="height: " id="sidebar" class="span3">
     <div class="well well-small"><a id="myCart" href="product_summary.html"><img src="~/Template/themes/images/ico-cart.png" alt="cart">3 Items in your cart  <span class="badge badge-warning pull-right">$155.00</span></a></div>
     <ul id="sideManu" class="nav nav-tabs nav-stacked">
-        <li class="subMenu open">
-            <a> SẢN PHẨM </a>
-            <ul>
-                <li><a class="active" href="products.html"><i class="icon-chevron-right"></i>Cameras (100) </a></li>
-            </ul>
-        </li>
+        @Html.Partial("_LoaiSanPham", Template.Models.Bus.LoaiSanPhamBus.DanhSach())
         @Html.Partial("_NhaSanXuat", Template.Models.Bus.NhaSanXuatBus.DanhSach())
         <li class="subMenu">
             <a>FOOD AND BEVERAGES [1000]</a>
