Fixed paging hidden

--- a/ASP.NET-MVC/Template/Template/Views/Shared/_MainLayout.cshtml
+++ b/ASP.NET-MVC/Template/Template/Views/Shared/_MainLayout.cshtml
@@ -29,6 +29,14 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="~/Template/themes/images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="~/Template/themes/images/ico/apple-touch-icon-57-precomposed.png">
     <style type="text/css" id="enject"></style>
+    
+    <meta charset="utf-8">    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>    
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
+
+    <link rel="stylesheet" type="text/css" href="~/Template/themes/css/menupage.css">
+
 </head>
 <body>
 <div id="header">
