--- a/ASP.NET-MVC/Template/Template/Views/NhaSanXuat/Index.cshtml
+++ b/ASP.NET-MVC/Template/Template/Views/NhaSanXuat/Index.cshtml
@@ -3,13 +3,6 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
-<head>
-    <meta charset="utf-8">    
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>    
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>  
-</head>
 <!-- Header End====================================================================== -->
 <div id="carouselBlk">
     <div id="myCarousel" class="carousel slide">
@@ -85,7 +78,7 @@
             }
             @sidePartital;
             <!-- Sidebar end=============================================== -->
-            <h4>Danh sách sản phẩm</h4>
+            <center><h2 style="height: 60px">Danh sách sản phẩm</h2></center>
             <ul class="thumbnails">
                 @foreach (var item in Model.Items)
                 {
@@ -102,11 +95,13 @@
                 }                
             </ul>
         </div>
-        <ul class="pagination">
-            @for (int i = 1; i < Model.TotalPages; i++)
-            {
-                <li>@Html.ActionLink(i.ToString(), "Index", new { page = i })</li>
-            }
-        </ul>
+        <div id="menupage">
+            <ul class="pagination">
+                @for (int i = 1; i <= Model.TotalPages; i++)
+                {
+                    <li>@Html.ActionLink(i.ToString(), "Index", new { page = i })</li>
+                }
+            </ul>
+        </div>
     </div>
 </div>
