Error SAN PHAM HOT

--- a/ASP.NET-MVC/Template/Template/Views/Shared/_SideBar.cshtml
+++ b/ASP.NET-MVC/Template/Template/Views/Shared/_SideBar.cshtml
@@ -3,21 +3,9 @@
     <ul id="sideManu" class="nav nav-tabs nav-stacked">
         @Html.Partial("_LoaiSanPham", Template.Models.Bus.LoaiSanPhamBus.DanhSach())
         @Html.Partial("_NhaSanXuat", Template.Models.Bus.NhaSanXuatBus.DanhSach())
-        <li class="subMenu">
-            <a>FOOD AND BEVERAGES [1000]</a>
-            <ul style="display:none">
-                <li><a href="products.html"><i class="icon-chevron-right"></i>Angoves  (35)</a></li>
-                <li><a href="products.html"><i class="icon-chevron-right"></i>Bouchard Aine & Fils (8)</a></li>
-                <li><a href="products.html"><i class="icon-chevron-right"></i>French Rabbit (5)</a></li>
-                <li><a href="products.html"><i class="icon-chevron-right"></i>Louis Bernard  (45)</a></li>
-                <li><a href="products.html"><i class="icon-chevron-right"></i>BIB Wine (Bag in Box) (8)</a></li>
-                <li><a href="products.html"><i class="icon-chevron-right"></i>Other Liquors & Wine (5)</a></li>
-                <li><a href="products.html"><i class="icon-chevron-right"></i>Garden (3)</a></li>
-                <li><a href="products.html"><i class="icon-chevron-right"></i>Khao Shong (11)</a></li>
-            </ul>
-        </li>
-        <li><a href="products.html">HEALTH & BEAUTY [18]</a></li>
-        <li><a href="products.html">SPORTS & LEISURE [58]</a></li>
-        <li><a href="products.html">BOOKS & ENTERTAINMENTS [14]</a></li>
+        <li><a href="#">SẢN PHẨM HOT</a></li>
+        <li><a href="#">HEALTH & BEAUTY [18]</a></li>
+        <li><a href="#">SPORTS & LEISURE [58]</a></li>
+        <li><a href="#">BOOKS & ENTERTAINMENTS [14]</a></li>
     </ul>
 </div>
