--- a/ASP.NET-MVC/Template/Template/Views/Shared/_SideBar.cshtml
+++ b/ASP.NET-MVC/Template/Template/Views/Shared/_SideBar.cshtml
@@ -4,8 +4,8 @@
         @Html.Partial("_LoaiSanPham", Template.Models.Bus.LoaiSanPhamBus.DanhSach())
         @Html.Partial("_NhaSanXuat", Template.Models.Bus.NhaSanXuatBus.DanhSach())
         <li><a href="#">SẢN PHẨM HOT</a></li>
-        <li><a href="#">HEALTH & BEAUTY [18]</a></li>
-        <li><a href="#">SPORTS & LEISURE [58]</a></li>
-        <li><a href="#">BOOKS & ENTERTAINMENTS [14]</a></li>
+        <li><a href="#">ĐANG GIẢM GIÁ</a></li>
+        <li><a href="#">MÁY CŨ GIÁ RẺ</a></li>
+        <li><a href="#">HỖ TRỢ TRẢ GÓP</a></li>
     </ul>
 </div>
