--- a/ASP.NET-MVC/Template/Template/Areas/Admin/Views/Shared/_MainLayoutAdmin.cshtml
+++ b/ASP.NET-MVC/Template/Template/Areas/Admin/Views/Shared/_MainLayoutAdmin.cshtml
@@ -88,7 +88,9 @@
                 </ul>
             </div>
         </div>
-        @RenderBody()
+        <div class="col-md-10">
+            @RenderBody()
+        </div>
     </div>
 </div>
 
