--- a/Template/Template/Views/Shared/_MainLayout.cshtml
+++ b/Template/Template/Views/Shared/_MainLayout.cshtml
@@ -82,12 +82,12 @@
     </div><!-- Container End -->
 </div>
 <!-- Placed at the end of the document so the pages load faster ============================================= -->
-<script src="~/Template/themes/js/jquery.js" type="text/javascript"></script>
-<script src="~/Template/themes/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="~/Template/themes/js/google-code-prettify/prettify.js"></script>
+<script type="text/javascript" src="~/Template/themes/js/jquery.js"></script>
+<script type="text/javascript" src="~/Template/themes/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="~/Template/themes/js/google-code-prettify/prettify.js"></script>
 
-<script src="~/Template/themes/js/bootshop.js"></script>
-<script src="~/Template/themes/js/jquery.lightbox-0.5.js"></script>
+<script type="text/javascript" src="~/Template/themes/js/bootshop.js"></script>
+<script type="text/javascript" src="~/Template/themes/js/jquery.lightbox-0.5.js"></script>
 
 <!-- Themes switcher section ============================================================================================= -->
 <div id="secectionBox">
